sandbox/output
StrategyNormalItem.java:6: error: cannot find symbol
        calculateQualityAfterDecreasingSellIn();
        ^
  symbol:   method calculateQualityAfterDecreasingSellIn()
  location: class StrategyNormalItem
1 error
